--- a/style.css
+++ b/style.css
@@ -67,7 +67,30 @@ body {
   flex-wrap: wrap; /* Wrap buttons to new lines when they exceed width */
   justify-content: center;
 }
+.back-button {
+  position: absolute;
+  display: none;
+  left: 20px;
+  top: 20px;
+  padding:3vh 4vw;
+  background-color:rgb(110, 198, 43);
+  color: #fff;
+  font-size: 3vh;
+  text-align: center;
+  box-shadow: 7px 7px 0 #494c5b;
+  border-radius: 10px;
+}
 
+.back-button:active {
+  transform: translateY(7px);
+  box-shadow: 0px 0px 0 #495b4b;
+}
+.popup-btns {
+  position: relative;
+  left: -17px;
+  display: flex;
+  align-items: center;
+}
 .button {
   padding: 4vh 5vw;
   margin: 0.5em;
