--- a/landing.css
+++ b/landing.css
@@ -1,54 +1,34 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
-}
-body {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  overflow: hidden;
-  color: #1f2f47;
-}
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
   flex: 1;
-}
-#particles-js {
-  position: absolute;
-  z-index: -2;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: white;
+  background-color: rgb(250, 234, 168);
+  max-width: 600px;
+  padding: 10em 5em;
 }
 .title {
   font-size: 4rem;
   max-width: 75%;
   position: relative;
   text-align: center;
-}
-.info {
- font-size: 1.75rem;
- line-height: 150%;
- margin: 3.5rem 0;
- width: 66%;
- text-align: center;
+  
 }
 .start-btn {
+  margin-top: 30px;
   outline: none;
   cursor: pointer;
   font-weight: bold;
   text-decoration: none;
-  color: #1f2f47;
-  font-size: 1.75rem;
-  background-color: transparent;
+  color: #fff;
+  font-size: 2.5rem;
+  background-color: rgb(110, 198, 43);
   border: 3px solid #1f2f47 ;
   padding: 1.66rem 2.25rem;
+  box-shadow: 7px 7px 0 #494c5b;
+  border-radius: 10px;
 }
 .start-btn:active {
-  background-color: #ebebeb;
+  transform: translateY(7px);
+  box-shadow: 0px 0px 0 #495b4b;
 }
