--- a/style.css
+++ b/style.css
@@ -148,3 +148,8 @@ body {
   max-width: 100%;
   max-height: 100%; /* Ensures the image does not exceed the option div */
 }
+
+.button-container .button {
+  opacity: 0;
+  transition: all 0.5s ease;
+}
