--- a/landing.css
+++ b/landing.css
@@ -1,32 +1,46 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+body {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  color: #1f2f47;
+}
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
   flex: 1;
-  background-color: rgb(250, 234, 168);
+  /* background-color: #ddf3e5; */
   max-width: 600px;
   padding: 10em 5em;
+  border-radius: 10%;
+  font-size: 4rem;
 }
 .title {
-  font-size: 4rem;
-  max-width: 75%;
+  font-size: 5rem;
+  max-width: 100%;
   position: relative;
   text-align: center;
-  
 }
 .start-btn {
-  margin-top: 30px;
+  margin-top: 40px;
   outline: none;
   cursor: pointer;
   font-weight: bold;
   text-decoration: none;
   color: #fff;
   font-size: 2.5rem;
-  background-color: rgb(110, 198, 43);
+  background-color: rgb(9, 119, 209);
   border: 3px solid #1f2f47 ;
   padding: 1.66rem 2.25rem;
   box-shadow: 7px 7px 0 #494c5b;
-  border-radius: 10px;
+  border-radius: 30px;
 }
 .start-btn:active {
   transform: translateY(7px);
